--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
 before_install:
   - docker build -t kabhishek30/docker-react -f Dockerfile.dev .
 
-script:
-  - docker run kabhishek30/docker-react npm run test -- --coverage
+# script:
+#  - docker run kabhishek30/docker-react npm run test -- --coverage
   
 deploy:
   provider: elasticbeanstalk
